<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_page"
    android:padding="20dp"
    tools:context=".Authorization.MainActivity">

    <RelativeLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/qqq" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iconIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="cursive"
            android:text="@string/qoshkeldiniz"
            android:textColor="@color/purple_500"
            android:textSize="32sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/abai"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/abaii" />

        <TextView
            android:id="@+id/sozAbai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="cursive"
            android:text="@string/abai_sozi"
            android:textColor="@color/purple_500"
            android:textSize="25sp">

        </TextView>
    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/skipBtn"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_button01"
        android:text="@string/kiru"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/skipBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_button02"
        android:text="@string/tirkel"
        android:textColor="@color/purple_500"
        android:textSize="20dp"
        android:textStyle="bold" />

</RelativeLayout>